Add Prometheus Monitoring support Pattern-2